| Bug #3368 | Stored procedure crash if group_concat(variable) | ||
|---|---|---|---|
| Submitted: | 2 Apr 2004 8:30 | Modified: | 15 Jun 2004 14:37 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.1-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Bugs System | Target Version: | |
[15 Jun 2004 14:37]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: Use of a variable within a GROUP_CONCAT function within a stored procedure causes a crash. Use of a variable within other functions (e.g. MIN/MAX) does not cause a crash. How to repeat: mysql> delimiter // mysql> create table t (s1 char(10))// Query OK, 0 rows affected (0.31 sec) mysql> insert into t values ('a'),('b')// Query OK, 2 rows affected (0.00 sec) Records: 2 Duplicates: 0 Warnings: 0 mysql> create procedure p () begin declare v2 char(10) default 'b'; select group_concat(v2) from t; end;// Query OK, 0 rows affected (0.00 sec) mysql> call p()// ERROR 2013 (HY000): Lost connection to MySQL server during query